<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

            <AutoCompleteTextView android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:theme="@style/Theme.AppCompat.Light"/>

            <AutoCompleteTextView android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/Theme.AppCompat.Light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journey_details"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="18sp" />

        <EditText android:id="@+id/et_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:theme="@style/Theme.AppCompat.Light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="18sp" />

            <EditText android:id="@+id/et_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/Theme.AppCompat.Light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/d"
                android:clickable="true"
                android:theme="@style/Theme.AppCompat.Light"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="18dp"
                android:text="@string/set_date"
                android:onClick="setDate"
                android:layout_marginLeft="50dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:prompt="@string/select_prompt"
            android:entries="@array/arrays3">
        </Spinner>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_details"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <AutoCompleteTextView android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:theme="@style/Theme.AppCompat.Light"/>

        <EditText android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:theme="@style/Theme.AppCompat.Light"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:prompt="@string/select_prompt"
                android:entries="@array/arrays">
            </Spinner>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:prompt="@string/select_prompt"
                android:entries="@array/arrays1">
            </Spinner>

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:prompt="@string/select_prompt"
                android:entries="@array/arrays2">
            </Spinner>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/book_now"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>